# streamlit-cloudrun

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: streamlit.py
