[project]
name = "streamlit-docker"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "k-ibaraki", email = "ibaraki@ncdc.co.jp" }]
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = ["streamlit>=1.28.2,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.7.0"]

[tool.hatch.metadata]
allow-direct-references = true
